[package]

name = "photometer"
version = "0.0.1"
authors = ["pavlov_dmitry"]


[dependencies]
num = "*"
time = "*"
url="*"
rustc-serialize="*"
log = "*"
env_logger = "*"
iron = "*"
router = "*"
rand = "*"
mount = "*"
#static = "*"

[dependencies.mysql]
version="*"
default-features = false

[dependencies.static]
git = "https://github.com/fuchsnj/static.git"
rev = "a08f593162bd69a556edac09633fb7a2e5b650df"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"
