[package]

name = "photometer"
version = "0.0.1"
authors = ["pavlov_dmitry"]


[dependencies]
num = "*"
time = "*"
url="*"
rustc-serialize="*"
log = "*"
env_logger = "*"
iron = "*"
router = "*"
rand = "*"

[dependencies.mysql]
version="*"
default-features = false

[dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"
